ui: prevent vertical modal overflows and instead present a scrollbar
(cherry picked from commit fe1a8ecfa6383f09eeab79c930431263b4ff50c1)
(cherry picked from commit 1c8639c3389f5b446620a402d37b4e07db48e657)
(cherry picked from commit af3d45c1e18434e712f8f3a1f07cc4ee1425bb06)
(cherry picked from commit b457af53e56423d6b8dd02f3d4623a95674b25d6)

--- a/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
@@ -877,3 +877,12 @@ div[data-for*="help_for"] {
 #OPNsenseStdWaitDialog div.modal-body {
   padding: 15px;
 }
+
+.modal-body {
+  max-height: calc(100vh - 265px);
+  overflow-y: auto;
+}
+
+.modal-footer {
+  padding: 15px;
+}
